# sdft-pytorch

./: .gitignore  README.md  pyproject.toml  train_permuted_mnist.py
.github/workflows/: python-publish.yml  test.yml
sdft_pytorch/: __init__.py  sdft_pytorch.py
tests/: test_sdft.py
