[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdft-pytorch"
version = "0.0.1"
description = "SDFT - Pytorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
dependencies = [
    "einops>=0.8.2",
    "ema-pytorch",
    'Jinja2',
    "torch>=2.5",
    "torch-einops-utils>=0.0.3"
]

[project.optional-dependencies]
test = [
    "pytest",
    "x-transformers"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.setuptools]
packages = ["sdft_pytorch"]
