[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdft-pytorch"
version = "0.0.7"
description = "SDFT - Pytorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
dependencies = [
    "discrete-continuous-embed-readout",
    "einops>=0.8.2",
    "ema-pytorch",
    'Jinja2',
    "torch>=2.5",
    "torch-einops-utils>=0.0.21"
]

[project.optional-dependencies]
test = [
    "pytest",
    "x-transformers>=2.15.2"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.setuptools]
packages = ["sdft_pytorch"]
